			SWI-Prolog ChangeLog
			====================

  * FIXED: Handling of :- dynamic Module:Name/Arity in PceEmacs
    cross-referencer.

  * FIXED: Cleanup of code for setting break-points.  Make this code
    work again from PceEmacs.

  * ENHANCED: prolog_to_os_filename(-Pl, +Os) to convert 8+3 filenames
    to long filenames.

  * ENHANCED: Allow setting spy-point from PceEmacs.

  * CLEANUP: Replace some more warnings with exceptions.

  * ENHANCED: library(url) for breaking down and constructing URL strings
    with some new functionality.  Additions by Lukas Faulstich.  Also
    fixed a dangling choice-point in decoding a www-encoded string.

  * ENHANCED: Moved tty_size/2 from library(tty) to built-in, exploiting IOCTL
    calls to fetch the terminal size when available.  This make tty_size/2
    return the actual values rather than constant values from the moment of
    startup.  Reported by Robert van Engelen.


VERSION 4.0.2
=============

  * FIXED: Memory leak in PL_get_chars() using CVT_WRITE.  Reported by
    Marcin Golebski.

  * INSTALL: export CIFLAGS=/path/to/local/include should now be
    honoured correctly by configure (Lukas Faulstich)

  * FIXED: absolute_file_name/3 not to trust its cache.

  * ADDED: callable/1 for better compatibility.

  * FIXED: $qlf_info/4 to request information on QLF files.  Also turned
    a couple of common warnings into proper exceptions.

  * FIXED: Avoid the usage of the appearently badly supported Win32 function
    GetFileInformationByHandle(), now using GetFileSize().  This fixes some
    false-alarm about not being able to find the system resources.

  * REMOVED: ed/1, also from the backward compatibility module.  Edit/1
    is the generic editing front-end.

  * FIXED: writeq(a(b,c,(d,e))), reported by Joachim Katzer.

  * FIXED: Memory leak in expand_file_name/2.  Reported by Daniel Cote.

  * FIXED: Print error-locations in files holding the ~-character.
    Thanks to Mike Maxwell.

VERSION 4.0.1